
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {int rssi; int ssid; } ;
typedef TYPE_1__ wifi_ap_record_t ;
typedef int uint8_t ;
typedef int uint16_t ;


 int ESP_LOGE (int ,char*) ;
 int ESP_LOGI (int ,char*,int ,int ) ;
 scalar_t__ ESP_OK ;
 int TAG ;
 int esp_wifi_scan_get_ap_num (int*) ;
 scalar_t__ esp_wifi_scan_get_ap_records (int*,TYPE_1__*) ;
 int free (TYPE_1__*) ;
 TYPE_1__* malloc (int) ;

__attribute__((used)) static void scan_done_handler(void)
{
    uint16_t sta_number = 0;
    uint8_t i;
    wifi_ap_record_t *ap_list_buffer;

    esp_wifi_scan_get_ap_num(&sta_number);
    ap_list_buffer = malloc(sta_number * sizeof(wifi_ap_record_t));
    if (ap_list_buffer == ((void*)0)) {
        ESP_LOGE(TAG, "Failed to malloc buffer to print scan results");
        return;
    }

    if (esp_wifi_scan_get_ap_records(&sta_number, (wifi_ap_record_t *)ap_list_buffer) == ESP_OK) {
        for (i = 0; i < sta_number; i++) {
            ESP_LOGI(TAG, "[%s][rssi=%d]", ap_list_buffer[i].ssid, ap_list_buffer[i].rssi);
        }
    }
    free(ap_list_buffer);
}
